tests/neg/22145g.check
-- [E008] Not Found Error: tests/neg/22145g.scala:10:4 -----------------------------------------------------------------
10 |  2.f() // error
   |  ^^^
   |  value f is not a member of Int
